# PoC_custom

./: .gitignore  app.html
.claude/: JOURNAL.md  STATUS.md  TASKS.md  (+1 more)
backend/: .containerignore  .env.example  .gitignore  CLAUDE.md  Containerfile  Makefile  README.md  cloudbuild.yaml  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: checks.py  router.py  schemas.py
backend/app/application/: run_address_recovery.py
backend/app/domain/: exceptions.py
backend/app/domain/entities/: application.py  check_context.py  check_result.py  master_data.py
backend/app/domain/interfaces/: address_master_repository.py  ai_client.py
backend/app/domain/rules/: base.py
backend/app/domain/rules/address/: address_kanji_kana_match.py  address_master_match.py  kana_converter.py
backend/app/domain/rules/contract/: existing_contract_match.py
backend/app/domain/rules/text/: char_limit_check.py
backend/app/infrastructure/ai/: fake_client.py
backend/app/infrastructure/ai/prompts/: address_kana_split_v1.txt  address_kanji_kana_complement_v1.txt  address_kanji_kana_consistency_v1.txt  address_kanji_split_v1.txt
backend/app/infrastructure/db/repositories/: in_memory_address_master.py
backend/docs/: migration-plan-address.md
backend/docs/adr/: 0001-hexagonal-portability.md
backend/tests/architecture/: test_layer_boundaries.py
backend/tests/integration/: test_api_address_kanji_kana_match.py  test_api_address_master_match.py  test_api_address_recovery.py
backend/tests/unit/application/: test_run_address_recovery.py
(+219 files in other folders)
